# emusound

./: .gitignore  .gitmodules  CMakeLists.txt  EmusoundConfig.h.in  README.md  main.cpp
content/: blueshadow.nsfe
content/emu_tests/: test.nsfe
demo/: CMakeLists.txt  EmuAudioSource.cpp  EmuAudioSource.h  ProgramManager.cpp  ProgramManager.h  audio_demo_files_mapper.h  dr_wav.h  main.cpp  miniaudio.h
external_libs/lib/windows/: soloud-s-d.lib  soloud-s.lib
include/: Enums.hpp  emusound.h
include/audio/: EmuConfig.hpp  EmuStream.cpp  EmuStream.h  EmuVoice.cpp  EmuVoice.h  Enums.hpp  IEmu.h  ISoundStream.h  IStream.h  MusicConfig.hpp  MusicStream.cpp  MusicStream.h  Noise.cpp  Noise.h  NoiseConfig.hpp  Notes.hpp  Waveform.h  WaveformConfig.hpp
include/audio/filters/: BandpassFilter.hpp  BiquadFilter.hpp  HighpassFilter1.hpp  HighpassFilter2.hpp  HighshelfFilter.hpp  ISoundFilter.h  LowpassFilter.hpp  LowpassFilter1.hpp  LowpassFilter2.hpp  LowshelfFilter.hpp  NotchingFilter.hpp  PeakingEqFilter.hpp  emusound_filters.h
include/data/: EmuTrackInfo.cpp  EmuTrackInfo.h
src/audio/: EmuStream.cpp  EmuVoice.cpp  Waveform.cpp
src/data/: EmuTrackInfo.cpp
